--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,5 +1,5 @@
 GpupoCamelSpiderReaderBundle_homepage:
-    pattern:  /all
+    pattern:  /
     defaults: { _controller: GpupoCamelSpiderReaderBundle:Default:index }
 
 GpupoCamelSpiderReaderBundle_folder:
