--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -10,6 +10,10 @@ GpupoCamelSpiderReaderBundle_news:
     pattern:  /news/{news_id}.{_format}
     defaults: { _controller: GpupoCamelSpiderReaderBundle:Default:news, _format: html }
 
+GpupoCamelSpiderReaderBundle_search:
+    pattern:  /search
+    defaults: { _controller: GpupoCamelSpiderReaderBundle:Default:search, _format: html }
+
 GpupoCamelSpiderReaderBundle_news_send:
     pattern:  /news/{news_id}/send
     defaults: { _controller: GpupoCamelSpiderReaderBundle:Default:send }
